# pandaSim

./: .env.example  .gitignore  GrAny_test.ipynb  README.md  main.ipynb  pyproject.toml
asset/Panda/: franka_panda_w_objs.xml
asset/Panda/assets/: panda_body_w_objs.xml
docs/: ESE564_project.md  main_report.tex
examples/: demo_upright.py  log.txt  upright.ipynb  upright_task.ipynb  utils.py
model/: MUJOCO_LOG.TXT  panda_vir.xml
model/common_arena/: tables.xml
model/franka_description/robots/: frankaEmikaPanda.urdf  frankaEmikaPandaVirtual.urdf
model/panda/: franka_panda.xml  franka_panda_w_objs.xml
model/panda/assets/: panda_gripper.xml
src/pandaSim/: __init__.py
src/pandaSim/control/: __init__.py  config.py  data_collector.py  factory.py  protocols.py  qp.py  resolved_rate.py  robot_executor.py
src/pandaSim/core/: config.py  upright_task.py
src/pandaSim/factories/: geometry_factory.py  planner_factory.py
src/pandaSim/fitting/: aabb.py  pca_obb.py  protocols.py
src/pandaSim/geometry/: __init__.py  genesis_adapter.py  protocols.py  rtb_adapter.py  utils.py
src/pandaSim/perception/: camera_adapter.py
src/pandaSim/planning/: convex_hull_planner.py  pca_planner.py  protocols.py  screw_motion_planner.py
tests/: QR2.ipynb  clean_execution_example.py  dev.ipynb  example.ipynb  main.ipynb  main.py  parallel.ipynb  pypanda.ipynb  pypanda_old.ipynb  rotational_slippage.ipynb  rtb.ipynb  rtb_adapter_example.py  rtb_utils.py  test_func.ipynb  test_import.py  visualize.py
tests/examples/: grasp_bottle.ipynb
tests/geometry/: genesis_adapter.py
