[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "pandaSim"
version          = "0.1.0"
description      = "A SOLID-compliant, backend-agnostic framework for robotic simulation"
readme           = "README.md"
requires-python  = ">=3.10"


classifiers      = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies     = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev  = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/VahidDanesh/pandaSim"

# ——— authors must *only* have name+email ———
[[project.authors]]
name  = "Vahid Danesh"
email = "vahid.danesh@stonybrook.edu"

[[project.authors]]
name  = "Maede Boroji"
email = "maede.boroji@stonybrook.edu"

[tool.setuptools]
package-dir = { "" = "src" }
